Atividade Box_Model

--- a/2_CSS/index.html
+++ b/2_CSS/index.html
@@ -21,9 +21,9 @@
     <h1> CSS - Inline, Internal, External</h1>
 
     <!-- INLINE CSS -->
-    <p style="color: red; background: blue;"> Fui estilizado com CSS inline</p>
-    <p style="color: red;">Outro parágrafo</p>
-    <p style="color: red;">Mais um parágrafo</p>
+    <p style="color: white; background: blue;"> Fui estilizado com CSS inline</p>
+    <p style="color: black;">Outro parágrafo</p>
+    <p style="color: black;">Mais um parágrafo</p>
 
     <!-- INTERNAL CSS -->
     <h2>Eu sou um h2</h2>
